--- a/my-app/package.json
+++ b/my-app/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hooks-global-state": "^2.0.0",
+    "react-image-magnify": "^2.7.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-virtualized-auto-sizer": "^1.0.7",
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-image-magnify": "^2.7.1",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "@types/react-window": "^1.8.5",
     "sass": "^1.55.0"
